--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,7 +141,8 @@ img {
     transition: transform 2s ease-in;
     border-left: 1px solid black;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-between;
+    font-size: 14px;
   }
 }
 
@@ -152,7 +153,6 @@ img {
 .nav__link {
   position: relative;
   color: black;
-  font-size: 14px;
 }
 
 .nav__link:hover {
@@ -259,10 +259,10 @@ img {
 }
 
 .button__cv {
-  display: inline-block;
+  display: inline-block; 
   background-color: #fff;
   color: var(--first-color);
-  padding: .75rem 2.5rem;
+  padding: 0.8rem 2rem;
   font-weight: var(--font-semi);
   border-radius: .5rem;
   transition: .3s;
@@ -293,70 +293,111 @@ img {
 }
 
 /* ===== SKILLS =====*/
+
+#skillsMain {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+#skillsDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+#skillsDiv {
+  padding-bottom: 70px;
+}
+
+#skillsMain {
+  flex-direction: row;
+  width: 900px;
+}
+
+.techDiv {
+  height: 200px ;
+  width: 320px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 5px;
+  border: 1px solid #333333;
+  margin: 6px;
+}
+
+.tech {
+  width: 64px;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  margin: 5px;
+}
+
+.techDivTitle {
+  width: 100%;
+  height: 40px;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 14px;
+  background-color: #333333;
+  color: white;
+  padding: 5px;
+}
+
+.tech img {
+  width: 64px;
+  max-height: 70px;
+}
+
+.tooltip {
+  position: relative;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: rgb(173, 216, 230);
+  color: #333333;
+  text-align: center;
+  border-radius: 6px;
+
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent rgb(173, 216, 230) transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
+
 .skills__container {
   row-gap: 2rem;
   text-align: center;
-}
-
-.skills__subtitle {
-  margin-bottom: var(--mb-2);
-}
-
-.skills__text {
-  margin-bottom: var(--mb-4);
-}
-
-.skills__data {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: relative;
-  font-weight: var(--font-semi);
-  padding: .5rem 1rem;
-  margin-bottom: var(--mb-4);
-  border-radius: .5rem;
-  box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
-}
-
-.skills__icon {
-  font-size: 2rem;
-  margin-right: var(--mb-2);
-  color: var(--first-color);
-}
-
-.skills__names {
-  display: flex;
-  align-items: center;
-}
-
-.skills__bar {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  background-color: var(--first-color);
-  height: .25rem;
-  border-radius: .5rem;
-  z-index: var(--z-back);
-}
-
-.skills__html {
-  width: 95%;
-}
-
-.skills__css {
-  width: 85%;
-}
-
-.skills__js {
-  width: 65%;
-}
-
-.skills__ux {
-  width: 85%;
-}
-
-.skills__img {
-  border-radius: .5rem;
 }
 
 /* ===== WORK =====*/
@@ -437,6 +478,13 @@ img {
   }
 }
 
+@media screen and (max-width: 600px) {
+  #skillsMain {
+    flex-direction: row;
+    width: 320px;
+  }
+}
+
 @media screen and (min-width: 576px) {
   .home {
     padding: 4rem 0 2rem;
@@ -459,11 +507,6 @@ img {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
     text-align: initial;
-  }
-  .skills__container {
-    grid-template-columns: .7fr;
-    justify-content: center;
-    column-gap: 1rem;
   }
   .work__container {
     grid-template-columns: repeat(2, 1fr);
@@ -524,15 +567,12 @@ img {
   .about__img img {
     width: 300px;
   }
-  .skills__container {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
-    align-items: center;
-    text-align: initial;
-  }
   .work__container {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 2rem;
+  }
+  #skillsMain {
+    flex-direction: row;
   }
 }
 
