--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@
   --normal-font-size: .938rem;
   --smaller-font-size: .75rem;
   /*===== Margenes =====*/
-  --mb-2: 1rem;
+  --mb-2: 0.5rem;
   --mb-4: 2rem;
   --mb-5: 2.5rem;
   --mb-6: 3rem;
@@ -75,14 +75,14 @@ img {
 /*===== CLASS CSS ===== */
 .section-title {
   position: relative;
-  font-size: var(--h2-font-size);
-  color: var(--first-color);
+  font-size: 45px;
+  color: black;
   margin-top: var(--mb-2);
-  margin-bottom: var(--mb-4);
+  margin-bottom: var(--mb-2);
   text-align: center;
 }
 
-.section-title::after {
+/* .section-title::after {
   position: absolute;
   content: '';
   width: 64px;
@@ -92,7 +92,7 @@ img {
   margin: auto;
   top: 2rem;
   background-color: var(--first-color);
-}
+} */
 
 .section {
   padding-top: 3rem;
@@ -126,6 +126,7 @@ img {
   font-weight: 400;
   font-size: 20px;
   font-family: 'Lato', sans-serif;
+  letter-spacing: 2px;
 }
 
 @media screen and (max-width: 767px) {
@@ -143,6 +144,7 @@ img {
     flex-direction: column;
     justify-content: space-between;
     font-size: 14px;
+    letter-spacing: 2px;
   }
 }
 
@@ -274,13 +276,37 @@ img {
 }
 
 /* ===== ABOUT =====*/
+
+#selfpic {
+  width: 330px;
+  height: 380px;
+  border-top-left-radius: 30%;
+  border-bottom-right-radius: 30%;
+  background-image: url("/assets/myPicture.png");
+  background-color: #1b1c1c;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  margin: 60px;
+  filter: grayscale(1);
+  transition: all 1s ease;
+  border: 5px solid #333333;
+}
+
+#selfpic:hover {
+  filter: grayscale(0);
+  background-color: rgb(173, 216, 230);
+  transition: all 0.3s ease;
+}
+
 .about__container {
   row-gap: 2rem;
   text-align: center;
 }
 
 .about__subtitle {
-  margin-bottom: var(--mb-2);
+  margin-bottom: var(--mb-4);
+  font-size: 30px;
 }
 
 .about__img {
@@ -290,6 +316,12 @@ img {
 .about__img img {
   width: 200px;
   border-radius: .5rem;
+}
+
+.about__text {
+  text-align: justify;
+  font-size: 18px;
+  line-height: 0.8cm;
 }
 
 /* ===== SKILLS =====*/
@@ -442,8 +474,8 @@ img {
 
 /* ===== FOOTER =====*/
 .footer {
-  background-color: var(--second-color);
-  color: #fff;
+  background-color: #fff;
+  color: black;
   text-align: center;
   font-weight: var(--font-semi);
   padding: 2rem 0;
@@ -459,13 +491,13 @@ img {
 }
 
 .footer__icon {
-  font-size: 1.5rem;
-  color: #fff;
+  font-size: 3rem;
+  color: black;
   margin: 0 var(--mb-2);
 }
 
 .footer__copy {
-  font-size: var(--smaller-font-size);
+  font-size: 1.5rem;
 }
 
 /* ===== MEDIA QUERIES=====*/
