--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -269,6 +269,7 @@ img {
   border-radius: .5rem;
   transition: .3s;
   border: var(--first-color) 0.1rem solid;
+  cursor: pointer;
 }
 
 .button:hover {
@@ -282,7 +283,7 @@ img {
   height: 380px;
   border-top-left-radius: 30%;
   border-bottom-right-radius: 30%;
-  background-image: url("/assets/myPicture.png");
+  background-image: url("../img/about.png");
   background-color: #1b1c1c;
   background-repeat: no-repeat;
   background-position: center;
@@ -379,8 +380,8 @@ img {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 14px;
-  background-color: #333333;
-  color: white;
+  background-color: rgb(173, 216, 230);
+  color: black;
   padding: 5px;
 }
 
@@ -470,6 +471,7 @@ img {
   font-size: var(--normal-font-size);
   cursor: pointer;
   margin-left: auto;
+  background-color: rgb(173, 216, 230);
 }
 
 /* ===== FOOTER =====*/
